z-index bug fix for rich text

--- a/src/app/_styles/ui.less
+++ b/src/app/_styles/ui.less
@@ -320,6 +320,9 @@ html{
       padding-top: 5px;
       md-switch{
         margin: 0;
+        .md-container{
+          z-index: 0;
+        }
       }
     }
     md-autocomplete button{
